--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -10,7 +10,7 @@
         android:id="@+id/openqr"
         android:layout_width="115dp"
         android:layout_height="57dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="288dp"
         android:text="@string/openqr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,10 +20,11 @@
         android:id="@+id/valueQR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="72dp"
         android:text="@string/valueQR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/openqr" />
+        app:layout_constraintTop_toBottomOf="@+id/openqr"
+        android:background="@drawable/rectangle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
